# humanoid

./: .envrc  .gitignore  README.md  Untitled.ipynb  docker-compose.yml  fhs-shell.nix  fhs.nix  flake.nix  initialize.sh  pixi.toml  pyproject.toml  ruff.toml  shell.nix
docker/: Dockerfile
humanoid/: demo_random_action.py  demo_robot.py  humanoid_robot.py
humanoid/assets/: mocap_humanoid.xml
humanoid/envs/isaac-gym/: humanoid.py
nix/: flake.nix
nix/dev-shells/: default.nix  fhs-pixi.nix  mujoco.nix  pixi.nix  uv-impure.nix
projects/skillmimic/: run.py
projects/skillmimic/data/cfg/train/rlg/: skillmimic.yaml
projects/skillmimic/learning/: common_agent.py  common_agent_discrete.py  common_player.py  common_player_discrete.py  hrl_agent_discrete.py  hrl_players_discrete.py  skillmimic_agent.py  skillmimic_models.py  skillmimic_network_builder.py  skillmimic_players.py
projects/skillmimic/utils/: config.py
scripts/: check_mujoco.py  check_torch.py  fix_checkpoint.py  isaacgym_setup.patch  phc_train.py
