[project]
name = "humanoid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
  "ipympl>=0.9.4",
  "jupyterlab>=4.3.2",
  "debugpy>=1.8.9",
  "matplotlib>=3.10.1",
  "numpy>=2.1.3",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "tqdm>=4.67.1",
  "beartype>=0.20.0",
  "jaxtyping>=0.2.38",
  "tyro>=0.9.16",
]

[project.optional-dependencies]
cuda = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "torchaudio>=2.5.1",
  "torchmetrics>=1.6.0",
  "lightning-utilities>=0.11.9",
  "triton>=3.1.0",
  "sympy>=1.13.1",
]
cpu = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "torchaudio>=2.5.1",
  "torchmetrics>=1.6.0",
  "lightning-utilities>=0.11.9",
  "sympy>=1.13.1",
]
mujoco = [
  "mujoco>=3.3.0",
  "mediapy>=1.2.2",
]
isaac = [
  "isaaclab[all,isaacsim]==2.0.2",
]

[tool.uv]
conflicts = [
  [{ extra = "cpu" }, { extra = "isaac" }],
  [{ extra = "cpu" }, { extra = "cuda" }],
  [{ extra = "isaac" }, { extra = "mujoco" }]
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "torch-cuda", extra = "cuda", marker = "platform_system != 'Darwin'"},
]
torchaudio = [
  { index = "torch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "torch-cuda", extra = "cuda", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "torch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "torch-cuda", extra = "cuda", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
