[project]
description = "" # TODO(howird)
name = "humanoid"
authors = [
    { name = "Howard Nguyen-Huu", email = "howardnguyenhuu@gmail.com" },
]
requires-python = ">=3.8,<3.9"
version = "0.1.0"
dependencies = [
    "gymtorch",
    "humanoid-vision",
    "isaacgym",
    "puffer-phc",

    "debugpy>=1.8.5,<2",
    "joblib>=1.4.2,<2",
    "polars>=1.5.0,<2",
    "tyro>=0.8.14,<0.9",
    "wandb>=0.16.6,<0.17",

    "carbs @ git+https://github.com/PufferAI/carbs.git",    
    "pufferlib @ git+https://github.com/kywch/PufferLib.git",
    "smpl_sim @ git+https://github.com/kywch/SMPLSim.git",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/howird/chumpy" }
gymtorch = { workspace = true }
humanoid-vision = { workspace = true }
isaacgym = { workspace = true }
puffer-phc = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/phalp", "packages/hmr2"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#
# [tool.hatch.metadata]
# allow-direct-references = true

[tool.ruff]
target-version = "py38"
line-length = 120
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
